--- a/elme/en.lproj/MainStoryboard.storyboard
+++ b/elme/en.lproj/MainStoryboard.storyboard
@@ -19,7 +19,7 @@
                     </connections>
                 </navigationController>
             </objects>
-            <point key="canvasLocation" x="-1" y="64"/>
+            <point key="canvasLocation" x="5" y="639"/>
         </scene>
         <!--Master View Controller - Master-->
         <scene sceneID="18">
@@ -84,7 +84,7 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="n0b-kj-cFh"/>
                                     <barButtonItem systemItem="add" id="cD2-rT-tvX">
                                         <connections>
-                                            <action selector="insertNewObject:" destination="FHW-Ah-rfl" id="U1Y-z4-vAo"/>
+                                            <segue destination="C98-km-agY" kind="modal" id="ABX-VX-tDa"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="8NF-Ch-ryZ"/>
@@ -128,6 +128,39 @@
                 </viewController>
             </objects>
             <point key="canvasLocation" x="465" y="639"/>
+        </scene>
+        <!--Edit Incident View Controller-->
+        <scene sceneID="Aen-bP-uRq">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="us5-Zt-bhX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="C98-km-agY" customClass="EditIncidentViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="R6H-kh-11q">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="wnV-2K-KLj">
+                                <rect key="frame" x="0.0" y="416" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem systemItem="cancel" id="h0o-nz-pLs">
+                                        <connections>
+                                            <action selector="cancel:" destination="C98-km-agY" id="pRm-F5-jJa"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="IWB-wP-5H5"/>
+                                    <barButtonItem systemItem="save" id="AwW-Rk-plL">
+                                        <connections>
+                                            <action selector="save:" destination="C98-km-agY" id="qOv-Wk-9gd"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="902" y="639"/>
         </scene>
         <!--Detail View Controller - Detail-->
         <scene sceneID="24">
@@ -203,6 +236,13 @@
             <relationships>
                 <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
                 <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="EditIncidentViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/EditIncidentViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancel:"/>
+                <relationship kind="action" name="save:"/>
             </relationships>
         </class>
         <class className="IncidentViewController" superclassName="CouchTableViewController">
